--- a/.github/workflows/manualpublication.yml
+++ b/.github/workflows/manualpublication.yml
@@ -27,22 +27,22 @@ jobs:
       - name: Build desktop
         run: npm run build:desktop
 
-      - name: build linux
+      - name: Build linux
         if: matrix.os == 'ubuntu-latest'
         run: npm run pack:lin
 
-      - name: build windows
+      - name: Build windows
         if: matrix.os == 'windows-latest'
         run: npm run pack:win
 
-      - name: build macos
+      - name: Build macos
         if: matrix.os == 'macos-latest'
         run: npm run pack:mac
 
-      - name: Artifact
+      - name: Upload artifact
         uses: actions/upload-artifact@v3
         with:
-          name: artifact
+          name: release
           path: packages/wallet-desktop/release
 
   publish:
@@ -56,7 +56,13 @@ jobs:
           echo ::set-output name=SOURCE_BRANCH::${GITHUB_REF#refs/heads/}
           echo ::set-output name=SOURCE_TAG::${GITHUB_REF#refs/tags/}
 
-      - name: create release
+      - name: Download release
+        uses: actions/download-artifact@v3
+        with:
+          name: release
+          path: packages/wallet-desktop/release
+
+      - name: Create release
         id: create_release
         uses: actions/create-release@v1
         env:
@@ -67,8 +73,7 @@ jobs:
           draft: true
           prerelease: false
 
-      - name: Upload Release DEB
-        if: matrix.os == 'ubuntu-latest'
+      - name: Upload Release deb
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -79,7 +84,6 @@ jobs:
           asset_content_type: application/zip
 
       - name: Upload Release AppImage
-        if: matrix.os == 'ubuntu-latest'
         uses: actions/upload-release-asset@v1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -87,4 +91,44 @@ jobs:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
           asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
           asset_name: wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
+          asset_content_type: application/zip
+
+      - name: Upload Release win-arm64
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
+          asset_name: wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-arm64.exe
+          asset_content_type: application/zip
+
+      - name: Upload Release win-x64
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
+          asset_name: wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x64.exe
+          asset_content_type: application/zip
+
+      - name: Upload Release win-ia32
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
+          asset_name: wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-ia32.exe
+          asset_content_type: application/zip
+
+      - name: Upload Release dmg
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: ./packages/wallet-desktop/release/wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x86_64.AppImage
+          asset_name: wallet-desktop-${{ steps.branch_name.outputs.SOURCE_TAG }}-x64.dmg
           asset_content_type: application/zip
