--- a/packages/wallet-desktop-openapi/src/paths/identities.yaml
+++ b/packages/wallet-desktop-openapi/src/paths/identities.yaml
@@ -226,9 +226,11 @@ components:
             header: 
               description: header fields to be added to the JWS header. "alg" and "kid" will be ignored since they are automatically added by the wallet.
               type: object
+              additionalProperties: true
             payload:
-              description: A JSON object to be signed by the wallet. It will become the payload of the generated JWS
+              description: A JSON object to be signed by the wallet. It will become the payload of the generated JWS. 'iss' (issuer) and 'iat' (issued at) will be automatically added by the wallet and will override provided values.
               type: object
+              additionalProperties: true
           required:
             - payload
 
