--- a/packages/bok-wallet/package.json
+++ b/packages/bok-wallet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@i3m/bok-wallet",
-  "version": "1.1.8",
+  "version": "1.2.0",
   "description": "",
   "types": "./types/index.d.ts",
   "main": "./dist/index.js",
@@ -66,7 +66,7 @@
   "license": "EUPL-1.2",
   "dependencies": {
     "@ethersproject/hdnode": "^5.3.0",
-    "@i3m/base-wallet": "1.1.8",
+    "@i3m/base-wallet": "^1.2.0",
     "debug": "^4.3.1",
     "did-jwt": "^5.2.0",
     "ethers": "^5.3.0",
